src/index.css
@import "tailwindcss";
@source "../node_modules/flowbite";
@source "../node_modules/flowbite-react";
@import "flowbite-react/plugin/tailwindcss";
@source "../.flowbite-react/class-list.json";
@custom-variant dark (&:where(.dark, .dark *));

:root {
    font-family: Inter, "Segoe UI", sans-serif;
    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    /* FullCalendar custom CSS */
    --fc-border-color: #a3a3a3;

    --fc-button-bg-color: #1f3664;
    --fc-button-hover-bg-color: #162d4a;
    --fc-button-active-bg-color: #1f5acd;

    --fc-button-text-color: #fff;
    --fc-today-bg-color: #0059ff30;
}

html,
body {
    margin: 0;
    min-height: 100%;
}

#root {
    min-height: 100svh;
    width: 100%;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
    -webkit-box-shadow: 0 0 0 1000px #fafafa inset !important;
    -webkit-text-fill-color: #222 !important;
    transition: background-color 9999s ease-in-out 0s;
}

/* Full Calendar CSS */
.fc * {
    color: #121212;
}

svg {
    vertical-align: middle;
}

.fc-button,
.fc-icon {
    color: #fafafa;
}

.fc .fc-button {
    height: 48px;
    font-weight: bold;
    font-size: 20px;
    box-shadow: 0 0 8px 1px #002f8e5a;
    padding: 0 20px;
    border: none;
}

.fc .fc-icon::before {
    position: relative;
    top: -1px;
}

.fc .fc-prev-button,
.fc .fc-next-button {
    width: 48px;
    padding: 0;
}

.fc .fc-icon-chevron-left {
    position: relative;
    left: -1px;
}

.fc .fc-icon-chevron-right {
    position: relative;
    right: -1px;
}

.fc-button span {
    /*cloudflare ssl certificates*/
}

.fc .fc-toolbar-chunk .fc-button-primary:focus, .fc .fc-toolbar-chunk .fc-button-primary:focus:active {
    box-shadow: none;
}

.fc-toolbar-title {
    font-weight: bold;
}

.fc-col-header {
    background: #c9c9c9;
}

.fc-day-other {
    background: #eaeaea;
}

.fc .fc-list {
    border: none;
}

.fc .fc-view {
    border-radius: 8px 8px 0 0;
    overflow: hidden;
}

.fc-view::after {
    content: "";
    position: absolute;
    inset: 0;
    pointer-events: none;
    z-index: 10;

    /* crea el "borde" que tapa */
    border: 1px solid var(--fc-border-color);
    border-radius: 8px 8px 0 0;
}

.fc .active-btn {
    background-color: #1f5acd;
}

.fc .active-btn:hover {
    background-color: #1b4fb9;
}

.fc .fc-scroller .fc-col-header {
    height: 52px;
}

.fc .fc-col-header-cell {
    vertical-align: middle;
}

.fc-card {
    color: #fff;
}

/* Thin (100) */
@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-Thin.ttf") format("truetype");
    font-weight: 100;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-ThinItalic.ttf") format("truetype");
    font-weight: 100;
    font-style: italic;
    font-display: swap;
}

/* ExtraLight (200) */
@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-ExtraLight.ttf") format("truetype");
    font-weight: 200;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-ExtraLightItalic.ttf") format("truetype");
    font-weight: 200;
    font-style: italic;
    font-display: swap;
}

/* Light (300) */
@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-Light.ttf") format("truetype");
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-LightItalic.ttf") format("truetype");
    font-weight: 300;
    font-style: italic;
    font-display: swap;
}

/* Regular (400) */
@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-Regular.ttf") format("truetype");
    font-weight: 400;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-Italic.ttf") format("truetype");
    font-weight: 400;
    font-style: italic;
    font-display: swap;
}

/* Medium (500) */
@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-Medium.ttf") format("truetype");
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-MediumItalic.ttf") format("truetype");
    font-weight: 500;
    font-style: italic;
    font-display: swap;
}

/* SemiBold (600) */
@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-SemiBold.ttf") format("truetype");
    font-weight: 600;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-SemiBoldItalic.ttf") format("truetype");
    font-weight: 600;
    font-style: italic;
    font-display: swap;
}

/* Bold (700) */
@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-Bold.ttf") format("truetype");
    font-weight: 700;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-BoldItalic.ttf") format("truetype");
    font-weight: 700;
    font-style: italic;
    font-display: swap;
}

/* ExtraBold (800) */
@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-ExtraBold.ttf") format("truetype");
    font-weight: 800;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-ExtraBoldItalic.ttf") format("truetype");
    font-weight: 800;
    font-style: italic;
    font-display: swap;
}

/* Black (900) */
@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-Black.ttf") format("truetype");
    font-weight: 900;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: "Public Sans";
    src: url("/fonts/PublicSans-BlackItalic.ttf") format("truetype");
    font-weight: 900;
    font-style: italic;
    font-display: swap;
}

/* DATEPICKER */

.bg-primary-700 {
    background-color: #24375e !important;

    color: white !important;
}

.bg-primary-700:hover {
    background-color: #162d4a !important;
}

button.outside-month-day {
    color: #999999 !important;

    opacity: 0.5 !important;

    cursor: not-allowed !important;
}

button.outside-month-day:hover {
    background-color: #f3f4f6 !important;

    opacity: 0.5 !important;
}

.dark .bg-primary-700 {
    background-color: #24375e !important;

    color: white !important;
}

.dark .bg-primary-700:hover {
    background-color: #162d4a !important;
}

.dark button.outside-month-day {
    color: #999999 !important;

    opacity: 0.5 !important;

    cursor: not-allowed !important;
}

.dark button.outside-month-day:hover {
    background-color: #374151 !important;

    opacity: 0.5 !important;
}

